--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -10,15 +10,41 @@
         content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
+
 <body>
-
+<main class="main">
   <%= require('html-loader!../partials/nav.html') %>
+  <section class="product_buy">
+    <div class="container">
+      <img class="headphones" src="../src/img/bitmap.svg" alt="headphones">
+      <article class="product">
+        <p class="product__description_small">Beats Studio3 Wireless</p>
+        <p class="product__name">Experience your music like never before.</p>
+        <div class="product__price-buy">
+          <p class="product__price">$299.95</p>
+          <a href="#" class="product__button">BUY NOW</a>
+        </div>
+        <p class="product__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
+      </article>
+    </div>
+  </section>
+  </div>
+  <section class="beats_pill">
+    <div class="container">
+      <article>
 
-  <h1 class="page-title">
-    <i class="fab fa-fort-awesome"></i>
-    HOME
-  </h1>
-
-  <%= require('html-loader!../partials/footer.html') %>
+      </article>
+      <article class="beats__slider">
+        <img src="../src/img/bitmap_1.svg" alt="slider">
+        <div class="beats__page">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </article>
+    </div>
+  </section>
+</main>
+<%= require('html-loader!../partials/footer.html') %>
 </body>
 </html>
