header, footer, main

--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -29,10 +29,24 @@
     </div>
   </section>
   </div>
-  <section class="beats_pill">
+  <section class="beats-pill">
     <div class="container">
       <article>
-
+        <p class="beats-pill_description">Portable Wireless Speaker</p>
+        <h2 class="product__name">Beats Pill<sup>+</sup></h2>
+        <div class="beats-pill__color">
+          <p class="beats-pill__change">Available Colors</p>
+          <p class="beats-pill__find">Find your Color</p>
+        </div>
+        <div class="change-color">
+          <p></p>
+          <p></p>
+          <p></p>
+        </div>
+        <div class="beats-pill__price">
+          <p class="beats-pill__buy">$299.95</p>BUY NOW</a>
+        </div>
+        <p class="product__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
       </article>
       <article class="beats__slider">
         <img src="../src/img/bitmap_1.svg" alt="slider">
