Наброски шапки, футера, наполнение сайта (сырая версия)

--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -30,32 +30,62 @@
   </section>
   </div>
   <section class="beats-pill">
-    <div class="container">
-      <article>
-        <p class="beats-pill_description">Portable Wireless Speaker</p>
-        <h2 class="product__name">Beats Pill<sup>+</sup></h2>
-        <div class="beats-pill__color">
-          <p class="beats-pill__change">Available Colors</p>
-          <p class="beats-pill__find">Find your Color</p>
+    <div class="beats-pill__product">
+      <p class="beats-pill_description">Portable Wireless Speaker</p>
+      <h2 class="product__name">Beats Pill<sup>+</sup></h2>
+      <div class="beats-pill__color">
+        <p class="beats-pill__change">Available Colors</p>
+        <p class="beats-pill__find">Find your Color</p>
+      </div>
+      <div class="change-color">
+        <a href="#"><p class="color-white"></p></a>
+        <a href="#"><p class="color-red"></p></a>
+        <a href="#"><p class="color-black"></p></a>
+      </div>
+      <div class="beats-pill__price">
+        <p class="beats-pill__buy">$299.95</p>
+        <a href="#" class="beats-pill__button">BUY NOW</a>
+      </div>
+      <p class="beats-pill__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
+    </div>
+    <div class="beats__img">
+      <img src="../src/img/bitmap_1.jpg" alt="slider">
+      <div class="beats__page">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="powerbeats">
+    <div class="powerbeats__product">
+      <div class="powerbeats__img">
+        <img src="../src/img/bitmap_2.svg" alt="powerbeats">
+      </div>
+      <div class="powerbeats__product-buy">
+        <div class="powerbeats__description-small">
+          <p>Totally wireless high-performance earphones</p>
         </div>
-        <div class="change-color">
-          <p></p>
-          <p></p>
-          <p></p>
+        <div class="powerbeats__title">
+          <p>Powerbeats Pro</p>
         </div>
-        <div class="beats-pill__price">
-          <p class="beats-pill__buy">$299.95</p>BUY NOW</a>
+        <div class="powerbeats__description">
+          <p>Up to 9 hours of listening time</p>
+          <p>Apple H1 Chip & Class 1 Wireless Bluetooth®</p>
+          <p>Sweat & water resistant</p>
+          <p>Adjustable, secure-fit earhooks</p>
         </div>
-        <p class="product__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
-      </article>
-      <article class="beats__slider">
-        <img src="../src/img/bitmap_1.svg" alt="slider">
-        <div class="beats__page">
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="powerbeats__price">
+          <p>$199.95</p>
         </div>
-      </article>
+        <div class="powerbeats__buy">
+          <a href="#" class="powerbeats__button">BUY NOW</a>
+        </div>
+        <div class="powerbeats__music">
+          <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
+        </div>
+      </div>
     </div>
   </section>
 </main>
