--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -14,25 +14,33 @@
 <body>
 <main class="main">
   <%= require('html-loader!../partials/nav.html') %>
-  <section class="product_buy">
-    <div class="container">
-      <img class="headphones" src="../src/img/bitmap.svg" alt="headphones">
-      <article class="product">
-        <p class="product__description_small">Beats Studio3 Wireless</p>
-        <p class="product__name">Experience your music like never before.</p>
-        <div class="product__price-buy">
-          <p class="product__price">$299.95</p>
-          <a href="#" class="product__button">BUY NOW</a>
+  <section class="headphones">
+    <div class="headphones__product">
+      <div class="headphones__img">
+        <img src="../src/img/bitmap.svg" alt="headphones">
+      </div>
+      <div class="headphones__product-buy">
+        <div class="headphones__name">
+          <p>Beats Studio3 Wireless</p>
         </div>
-        <p class="product__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
-      </article>
+        <div class="headphones__description">
+          <p>Experience your music like never before.</p>
+        </div>
+        <div class="headphones__buy">
+          <p class="headphones__price">$299.95</p>
+          <a href="#" class="headphones__button">BUY NOW</a>
+        </div>
+        <div class="headphones__music">
+          <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
+        </div>
+      </div>
     </div>
   </section>
-  </div>
+
   <section class="beats-pill">
     <div class="beats-pill__product">
       <p class="beats-pill_description">Portable Wireless Speaker</p>
-      <h2 class="product__name">Beats Pill<sup>+</sup></h2>
+      <h2 class="beats-pill__name">Beats Pill<sup>+</sup></h2>
       <div class="beats-pill__color">
         <p class="beats-pill__change">Available Colors</p>
         <p class="beats-pill__find">Find your Color</p>
@@ -46,7 +54,7 @@
         <p class="beats-pill__buy">$299.95</p>
         <a href="#" class="beats-pill__button">BUY NOW</a>
       </div>
-      <p class="beats-pill__description_long">$60 Apple Music gift card with purchase of select Beats products.*</p>
+      <p class="beats-pill__music">$60 Apple Music gift card with purchase of select Beats products.*</p>
     </div>
     <div class="beats__img">
       <img src="../src/img/bitmap_1.jpg" alt="slider">
