--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -97,27 +97,25 @@
 
   <section class="beatsx">
     <div class="beatsx__product">
-      <div class="beatsx__product-buy">
-        <div class="beatsx__description-small">
-          <p>Talk. Listen. Beats.</p>
-        </div>
-        <div class="beatsx__title">
-          <h2>Beats<sup>x</sup></h2>
-        </div>
-        <div class="beatsx__description">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-          <p>Sweat & water resistant</p>
-          <p>Apple W1 Chip & Class 1 Wireless Bluetooth®</p>
-        </div>
-        <div class="beatsx__price">
-          <p>$199.95</p>
-          <button class="beatsx__button">BUY NOW</button>
-        </div>
+      <div>
+        <p class="beatsx__title">Talk. Listen. Beats.</p>
+        <h2 class="beatsx__name">Beatsˣ</h2>
       </div>
-      <div class="beatsx__img">
-        <img src="../src/img/bitmap_3.svg">
+      <div class="beatsx__description">
+        <p>
+          Up to 8 hours of battery life </br>
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</br>
+          Sweat & water resistant</br>
+          Apple W1 Chip & Class 1 Wireless Bluetooth®</br>
+        </p>
       </div>
+      <div class="beatsx__price">
+        <p class="beatsx__buy">$299.95</p>
+        <button class="beatsx__button">BUY NOW</button>
+      </div>
+    </div>
+    <div class="beatsx__img">
+      <img src="../src/img/bitmap_3.svg" alt="slider">
     </div>
   </section>
   <%= require('html-loader!../partials/product.html') %>
