refactoring css, html. Mobile version

--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -18,9 +18,9 @@
     <section class="headphones">
       <div class="container">
         <div class="headphones__product">
-          <div>
+          <div class="hp__img">
             <img class="headphones__img" src="../src/img/bitmap.svg" alt="headphones">
-            <img class="m-headphones__img" src="../src/img/mobile/m_bitmap_1.svg" alt="m_headsphones">
+            <img class="m-headphones__img" src="../src/img/mobile/m_bitmap_1.svg" alt="m_headphones">
           </div>
           <div class="headphones__product-buy">
             <div class="headphones__name">
@@ -42,10 +42,12 @@
     </section>
 
     <section class="beats-pill">
-      <div class="container">
+      <div class="beats-pill__container">
         <div class="beats-pill__product">
-          <p class="beats-pill_description">Portable Wireless Speaker</p>
-          <h2 class="beats-pill__name">Beats Pill<sup>+</sup></h2>
+          <div class="beats-pill__title">
+            <p class="beats-pill_description">Portable Wireless Speaker</p>
+            <h2 class="beats-pill__name">Beats Pill<sup>+</sup></h2>
+          </div>
           <div class="beats-pill__color">
             <p class="beats-pill__change">Available Colors</p>
             <p class="beats-pill__find">Find your Color</p>
@@ -59,37 +61,39 @@
             <p class="beats-pill__buy">$299.95</p>
             <button class="beats-pill__button">BUY NOW</button>
           </div>
-          <p class="beats-pill__music">$60 Apple Music gift card with purchase of select Beats products.*</p>
+          <div class="beats-pill__music">
+            <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
+          </div>
         </div>
-        <article>
-          <div class="beats-pill__slider">
-            <div class="beats-pill__img">
-              <img src="../src/img/bitmap_1.jpg" alt="slider">
-            </div>
-            <div class="beats-pill__page">
-              <div class="slider">
-                <div class="slider-dots"></div>
-                <div class="slider-dots"></div>
-                <div class="slider-dots"></div>
-              </div>
+        <div class="beats-pill__slider">
+          <div>
+            <img class="beats-pill__img" src="../src/img/bitmap_1.jpg" alt="slider">
+            <img class="m_beats-pill__img" src="../src/img/mobile/m_bitmap_2.svg" alt="m-slider">
+          </div>
+          <div class="beats-pill__page">
+            <div class="slider">
+              <div class="slider-dots"></div>
+              <div class="slider-dots"></div>
+              <div class="slider-dots"></div>
             </div>
           </div>
-        </article>
+        </div>
       </div>
     </section>
 
     <section class="powerbeats">
-      <div class="container">
+      <div class="powerbeats__container">
         <div class="powerbeats__product">
-          <div class="powerbeats__img">
-            <img src="../src/img/bitmap_2.svg" alt="powerbeats">
+          <div class="powerbeats__image">
+            <img class="powerbeats__img" src="../src/img/bitmap_2.svg" alt="powerbeats">
+            <img class="m-powerbeats__img" src="../src/img/mobile/m_bitmap_3.svg" alt="m-powerbeats">
           </div>
           <div class="powerbeats__product-buy">
             <div class="powerbeats__description-small">
               <p>Totally wireless high-performance earphones</p>
             </div>
             <div class="powerbeats__title">
-              <h2>POWERBEATS PRO</h2>
+              <h2>powerbeats pro</h2>
             </div>
             <div class="powerbeats__description">
               <p>Up to 9 hours of listening time</p>
@@ -110,7 +114,7 @@
     </section>
 
     <section class="beatsx">
-      <div class="container">
+      <div class="beatsx__container">
         <div class="beatsx__product">
           <div>
             <p class="beatsx__title">Talk. Listen. Beats.</p>
@@ -129,8 +133,9 @@
             <button class="beatsx__button">BUY NOW</button>
           </div>
         </div>
-        <div class="beatsx__img">
-          <img src="../src/img/bitmap_3.svg" alt="slider">
+        <div class="beatsx__image">
+          <img class="beatsx__img" src="../src/img/bitmap_3.svg" alt="image">
+          <img class="m-beatsx__img" src="../src/img/mobile/m_bitmap_4.svg" alt="m-image">
         </div>
       </div>
     </section>
