--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -9,6 +9,7 @@
   <meta name="viewport"
         content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
   <main class="main">
     <%= require('html-loader!../partials/nav.html') %>
     <section class="headphones">
-      <div class="container">
+      <div class="headphones__container">
         <div class="headphones__product">
           <div class="hp__img">
             <img class="headphones__img" src="../src/img/bitmap.svg" alt="headphones">
