--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -68,15 +68,8 @@
         </div>
         <div class="beats-pill__slider">
           <div>
-            <img class="beats-pill__img" src="../src/img/bitmap_1.jpg" alt="slider">
+            <div><img class="beats-pill__img" src="../src/img/bitmap_1.jpg" alt="slider"></div>
             <img class="m_beats-pill__img" src="../src/img/mobile/m_bitmap_2.svg" alt="m-slider">
-          </div>
-          <div class="beats-pill__page">
-            <div class="slider">
-              <div class="slider-dots"></div>
-              <div class="slider-dots"></div>
-              <div class="slider-dots"></div>
-            </div>
           </div>
         </div>
       </div>
