--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -16,123 +16,12 @@
 <div class="wrapper">
   <main class="main">
     <%= require('html-loader!../partials/nav.html') %>
-    <section class="headphones">
-      <div class="headphones__container">
-        <div class="headphones__product">
-          <div class="hp__img">
-            <img class="headphones__img" src="../src/img/bitmap.svg" alt="headphones">
-            <img class="m-headphones__img" src="../src/img/mobile/m_bitmap_1.svg" alt="m_headphones">
-          </div>
-          <div class="headphones__product-buy">
-            <div class="headphones__name">
-              <p>Beats Studio3 Wireless</p>
-            </div>
-            <div class="headphones__description">
-              <p>Experience your music like never before.</p>
-            </div>
-            <div class="headphones__buy">
-              <p class="headphones__price">$299.95</p>
-              <button class="headphones__button">BUY NOW</button>
-            </div>
-            <div class="headphones__music">
-              <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section class="beats-pill">
-      <div class="beats-pill__container">
-        <div class="beats-pill__product">
-          <div class="beats-pill__title">
-            <p class="beats-pill_description">Portable Wireless Speaker</p>
-            <h2 class="beats-pill__name">Beats Pill<sup>+</sup></h2>
-          </div>
-          <div class="beats-pill__color">
-            <p class="beats-pill__change">Available Colors</p>
-            <p class="beats-pill__find">Find your Color</p>
-          </div>
-          <div class="change-color">
-            <a href="#"><p class="color-white"></p></a>
-            <a href="#"><p class="color-red"></p></a>
-            <a href="#"><p class="color-black"></p></a>
-          </div>
-          <div class="beats-pill__price">
-            <p class="beats-pill__buy">$299.95</p>
-            <button class="beats-pill__button">BUY NOW</button>
-          </div>
-          <div class="beats-pill__music">
-            <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
-          </div>
-        </div>
-        <div class="beats-pill__slider">
-          <div>
-            <div><img class="beats-pill__img" src="../src/img/bitmap_1.jpg" alt="slider"></div>
-            <img class="m_beats-pill__img" src="../src/img/mobile/m_bitmap_2.svg" alt="m-slider">
-          </div>
-        </div>
-      </div>
-    </section>
+    <%= require('html-loader!../partials/headphones.html') %>
+    <%= require('html-loader!../partials/beats-pill.html') %>
+    <%= require('html-loader!../partials/powerbeats.html') %>
+    <%= require('html-loader!../partials/beatsx.html') %>
 
-    <section class="powerbeats">
-      <div class="powerbeats__container">
-        <div class="powerbeats__product">
-          <div class="powerbeats__image">
-            <img class="powerbeats__img" src="../src/img/bitmap_2.svg" alt="powerbeats">
-            <img class="m-powerbeats__img" src="../src/img/mobile/m_bitmap_3.svg" alt="m-powerbeats">
-          </div>
-          <div class="powerbeats__product-buy">
-            <div class="powerbeats__description-small">
-              <p>Totally wireless high-performance earphones</p>
-            </div>
-            <div class="powerbeats__title">
-              <h2>powerbeats pro</h2>
-            </div>
-            <div class="powerbeats__description">
-              <p>Up to 9 hours of listening time</p>
-              <p>Apple H1 Chip & Class 1 Wireless Bluetooth®</p>
-              <p>Sweat & water resistant</p>
-              <p>Adjustable, secure-fit earhooks</p>
-            </div>
-            <div class="powerbeats__price">
-              <p>$199.95</p>
-              <button class="powerbeats__button">BUY NOW</button>
-            </div>
-            <div class="powerbeats__music">
-              <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="beatsx">
-      <div class="beatsx__container">
-        <div class="beatsx__product">
-          <div>
-            <p class="beatsx__title">Talk. Listen. Beats.</p>
-            <h2 class="beatsx__name">Beatsˣ</h2>
-          </div>
-          <div class="beatsx__description">
-            <p>
-              Up to 8 hours of battery life </br>
-              With Fast Fuel, a 5-minute charge = 2 hours of playback</br>
-              Sweat & water resistant</br>
-              Apple W1 Chip & Class 1 Wireless Bluetooth®</br>
-            </p>
-          </div>
-          <div class="beatsx__price">
-            <p class="beatsx__buy">$299.95</p>
-            <button class="beatsx__button">BUY NOW</button>
-          </div>
-        </div>
-        <div class="beatsx__image">
-          <img class="beatsx__img" src="../src/img/bitmap_3.svg" alt="image">
-          <img class="m-beatsx__img" src="../src/img/mobile/m_bitmap_4.svg" alt="m-image">
-        </div>
-      </div>
-    </section>
     <%= require('html-loader!../partials/product.html') %>
     <%= require('html-loader!../partials/signup.html') %>
   </main>
