--- a/src/page-contacts/tmpl.html
+++ b/src/page-contacts/tmpl.html
@@ -12,13 +12,10 @@
 </head>
 <body>
 
-  <%= require('html-loader!../partials/nav.html') %>
-
-  <h1 class="page-title">
-    <i class="fas fa-map-marked-alt"></i>
-    CONTACTS
-  </h1>
-
-  <%= require('html-loader!../partials/footer.html') %>
+<%= require('html-loader!../partials/nav.html') %>
+<div class="detail__beats-pill">
+  <%= require('html-loader!../partials/beats-pill.html') %>
+</div>
+<%= require('html-loader!../partials/footer.html') %>
 </body>
 </html>
