--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div class="wrapper">
+<div class="container">
   <main class="main">
     <%= require('html-loader!../partials/nav.html') %>
 
