adaptive, product, mixin-media

--- a/src/page-contacts/tmpl.html
+++ b/src/page-contacts/tmpl.html
@@ -16,6 +16,10 @@
 <div class="detail__beats-pill">
   <%= require('html-loader!../partials/beats-pill.html') %>
 </div>
+<div class="product__slider">
+  <%= require('html-loader!../partials/product.html') %>
+</div>
+<%= require('html-loader!../partials/detail_video.html') %>
 <%= require('html-loader!../partials/footer.html') %>
 </body>
 </html>
