detail-page, catalog-page, refactor.

--- a/src/page-about/tmpl.html
+++ b/src/page-about/tmpl.html
@@ -18,16 +18,16 @@
 </head>
 <body>
 <div class="filter__nav">
-  <%= require('html-loader!../partials/nav.html') %>
+  <%= require('html-loader!../partials/navbar/nav.html') %>
 </div>
 <div class="container__grid">
   <div class="container__filter">
-    <%= require('html-loader!../partials/filter_products.html') %>
+    <%= require('html-loader!../partials/filter-page/filter_products.html') %>
   </div>
   <div class="filter__products">
-    <%= require('html-loader!../partials/product.html') %>
+    <%= require('html-loader!../partials/products/product.html') %>
   </div>
 </div>
-<%= require('html-loader!../partials/footer.html') %>
+<%= require('html-loader!../partials/footer/footer.html') %>
 </body>
 </html>
