--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -15,17 +15,17 @@
 <body>
 <div class="container">
   <main class="main">
-    <%= require('html-loader!../partials/nav.html') %>
+    <%= require('html-loader!../partials/navbar/nav.html') %>
 
-    <%= require('html-loader!../partials/headphones.html') %>
-    <%= require('html-loader!../partials/beats-pill.html') %>
-    <%= require('html-loader!../partials/powerbeats.html') %>
-    <%= require('html-loader!../partials/beatsx.html') %>
+    <%= require('html-loader!../partials/headphones/headphones.html') %>
+    <%= require('html-loader!../partials/beats-pill/beats-pill.html') %>
+    <%= require('html-loader!../partials/powerbeats/powerbeats.html') %>
+    <%= require('html-loader!../partials/beatsx/beatsx.html') %>
 
-    <%= require('html-loader!../partials/product.html') %>
-    <%= require('html-loader!../partials/signup.html') %>
+    <%= require('html-loader!../partials/products/product.html') %>
+    <%= require('html-loader!../partials/signup/signup.html') %>
   </main>
-  <%= require('html-loader!../partials/footer.html') %>
+  <%= require('html-loader!../partials/footer/footer.html') %>
 </div>
 </body>
 </html>
