--- a/src/page-contacts/tmpl.html
+++ b/src/page-contacts/tmpl.html
@@ -12,14 +12,20 @@
 </head>
 <body>
 
-<%= require('html-loader!../partials/nav.html') %>
-<div class="detail__beats-pill">
-  <%= require('html-loader!../partials/beats-pill.html') %>
+<%= require('html-loader!../partials/navbar/nav.html') %>
+<div class="slider__container">
+  <div class="detail-slider__container">
+    <%= require('html-loader!../partials/detail-page/detail_slider.html') %>
+  </div>
+  <div class="detail__beats-pill">
+    <%= require('html-loader!../partials/beats-pill/beats-pill.html') %>
+  </div>
 </div>
 <div class="product__slider">
-  <%= require('html-loader!../partials/product.html') %>
+  <%= require('html-loader!../partials/products/product.html') %>
 </div>
-<%= require('html-loader!../partials/detail_video.html') %>
-<%= require('html-loader!../partials/footer.html') %>
+
+<%= require('html-loader!../partials/detail-page/detail_video.html') %>
+<%= require('html-loader!../partials/footer/footer.html') %>
 </body>
 </html>
