detail-page, catalog-page, slider

--- a/src/page-about/tmpl.html
+++ b/src/page-about/tmpl.html
@@ -25,6 +25,7 @@
     <%= require('html-loader!../partials/filter-page/filter_products.html') %>
   </div>
   <div class="filter__products">
+    <p class="filter__title_mobile">Earphones</p>
     <%= require('html-loader!../partials/products/product.html') %>
   </div>
 </div>
