--- a/src/page-contacts/tmpl.html
+++ b/src/page-contacts/tmpl.html
@@ -21,6 +21,9 @@
     <%= require('html-loader!../partials/beats-pill/beats-pill.html') %>
   </div>
 </div>
+<div class="recommend__title">
+  <p>Recommended</p>
+</div>
 <div class="product__slider">
   <%= require('html-loader!../partials/products/product.html') %>
 </div>
