--- a/src/page-about/tmpl.html
+++ b/src/page-about/tmpl.html
@@ -27,6 +27,7 @@
   <div class="filter__products">
     <p class="filter__title_mobile">Earphones</p>
     <%= require('html-loader!../partials/products/product.html') %>
+    <%= require('html-loader!../partials/filter-page/pagination.html') %>
   </div>
 </div>
 <%= require('html-loader!../partials/footer/footer.html') %>
