--- a/src/page-contacts/tmpl.html
+++ b/src/page-contacts/tmpl.html
@@ -27,8 +27,9 @@
 <div class="product__slider">
   <%= require('html-loader!../partials/products/product.html') %>
 </div>
-
+<div>
 <%= require('html-loader!../partials/detail-page/detail_video.html') %>
+</div>
 <%= require('html-loader!../partials/footer/footer.html') %>
 </body>
 </html>
